--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
     monospace;
 } */
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 
 *,
 ::before,
@@ -76,11 +76,32 @@ label {
 .black-text {
   color: #656262 !important;
 }
+.link-text {
+  display: flex;
+  justify-content: right;
+  letter-spacing: 0px;
+  font-size: 11px;
+  color: #de7949 !important;
+  text-decoration: none;
+}
 .formlabel {
   font-size: var(--smaller-font-size);
 }
 .bold-text {
   font-weight: 600;
+}
+.text-right {
+  margin-top: 10px !important;
+  text-align: left;
+  letter-spacing: 0px;
+  font-size: 11px;
+  color: #959090;
+  opacity: 1;
+}
+.text-right a {
+  letter-spacing: 0px;
+  color: #de7949 !important;
+  text-decoration: none;
 }
 .text-center {
   text-align: center;
@@ -122,9 +143,7 @@ section {
   /* height: calc(100vh - var(--header-height)); */
   align-content: center;
   position: relative;
-
   background-size: contain;
-
   padding: 1rem 0 2rem;
 }
 
